cmake_minimum_required(VERSION 3.7)
project(i01_2)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        bin/backfill_stats.sh
        bin/cat_pcap.sh
        bin/gen_locate_conf.sh
        bin/gen_secref.sh
        bin/gen_spref.sh
        bin/generate_stats.sh
        bin/ipmi.sh
        bin/ls_pcap.sh
        bin/truncolog.sh
        bin/univ.py
        cmake/upstream-20140818/FindBoost.cmake
        cmake/upstream-20140818/FindCURL.cmake
        cmake/upstream-20140818/FindDoxygen.cmake
        cmake/upstream-20140818/FindGit.cmake
        cmake/upstream-20140818/FindHDF5.cmake
        cmake/upstream-20140818/FindMatlab.cmake
        cmake/upstream-20140818/FindPostgreSQL.cmake
        cmake/upstream-20140818/FindProtobuf.cmake
        cmake/upstream-20140818/FindPythonInterp.cmake
        cmake/upstream-20140818/FindPythonLibs.cmake
        cmake/upstream-20140818/FindQt.cmake
        cmake/upstream-20140818/FindQt3.cmake
        cmake/upstream-20140818/FindQt4.cmake
        cmake/upstream-20140818/FindWt.cmake
        cmake/upstream-20140818/FindZLIB.cmake
        cmake/CMakeHelpers.cmake
        cmake/DetectCompiler.cmake
        cmake/DetectCompilerCaches.cmake
        cmake/FindBerkeleyDB.cmake
        cmake/FindEigen3.cmake
        cmake/FindFix8.cmake
        cmake/FindGlog.cmake
        cmake/FindLibLZ4.cmake
        cmake/FindLibnl3.cmake
        cmake/FindLibsystemd.cmake
        cmake/FindLua.cmake
        cmake/FindLuaJIT.cmake
        cmake/FindOpenOnload.cmake
        cmake/FindPCAP.cmake
        cmake/FindPoco.cmake
        cmake/FindReadline.cmake
        cmake/FindTBB.cmake
        cmake/UseDoxygen.cmake
        conf/adv.lua
        conf/all_live.lua
        conf/capture.conf
        conf/core.conf
        conf/csv.lua
        conf/nyse.conf
        conf/NYSEAlgoUAT.sessions.xml
        conf/obu.conf
        conf/sessions_prod.lua
        conf/sessions_prod_vanilli.lua
        conf/sessions_prod_zeppelin.lua
        conf/sessions_uat.lua
        conf/threads.conf
        conf/time.lua
        data/aleph_test.lua
        data/all_sessions_uat.lua
        data/apc.lua
        data/ARCASymbolMapping.xml
        data/ARCASymbolMapping_INTC.xml
        data/arcx_ab.lua
        data/arcx_int.lua
        data/bats.lua
        data/bats_nj2.lua
        data/bats_unit1_sp.lua
        data/batsconf.py
        data/baty.lua
        data/baty_nj2.lua
        data/boe_sessions_uat.lua
        data/BZX_UNIT_1_20140724_1500.pcap-ns
        data/BZX_UNIT_1_20140724_1500_first5.pcap-ns
        data/BZX_UNIT_1_20140724_1500_first5.pcap-ns.lz4
        data/core_config_test.lua
        data/edga.lua
        data/edga_nextgen.lua
        data/edgeconf.py
        data/edgx.lua
        data/edgx_nextgen.lua
        data/etb_locates20150504.lua
        data/exchanges.lua
        data/full.lua
        data/full_univ.lua
        data/locates.lua
        data/manual.lua
        data/md_unittest.lua
        data/mdedge.20140903.080000.1409745600.edgx_unit8.first10k.pcap-ns
        data/mdedge.20141111.unit2.first10k.pcap-ns
        data/mdedge.20150218.090000_090030.pcap-ns
        data/mdedge_first10k.pcap-ns
        data/mdnasdaq.20141003.090000.1412341200.first10k.pcap-ns
        data/mdnasdaq.20141111.120000_120100.XNAS.first10k.pcap-ns
        data/mdnasdaq.20150218.090000_090030.pcap-ns
        data/mdsfti.20140822.000000_090000.obua.chan2.first10k.pcap-ns
        data/mdsfti.20140822.090000.arcaxdp_chan1_10k.pcap-ns
        data/mdsfti.20140822.130000.1408726800.arcaxdp.chan2.trd.first1k.pcap-ns
        data/mdsfti.20140822.130000.1408726800.xdptrd.2k.pcap-ns
        data/mdsfti.20141111.140000.ARCX.unit1.first50k.pcap-ns
        data/myconf.py
        data/NYSESymbolMap.20140925.xml
        data/NYSESymbolMapping.xml
        data/NYSESymbolMapping_NMS.xml
        data/oe_unittest.lua
        data/risk_prod_test.lua
        data/sampler.lua
        data/simtest.lua
        data/sp500.lua
        data/sp500_univ.lua
        data/test_bats.lua
        data/universe.lua
        data/xbos.lua
        data/xnas.lua
        data/xnys.lua
        data/xpsx.lua
        dist/ssh/keys/ido.pub
        dist/ssh/keys/jsweeney.pub
        dist/ssh/keys/tkane.pub
        dist/vagrant/build_basebox.sh
        dist/vagrant/packer-arch-install-virtualbox-sh.patch
        dist/vagrant/sha512sums
        doc/specs/BATS/BATS_Auction_Feed_Specification.pdf
        doc/specs/BATS/BATS_BYX_Exchange_US_Equities_BOE_Specification.pdf
        doc/specs/BATS/BATS_BZX_Exchange_US_Equities_BOE_Specification.pdf
        doc/specs/BATS/BATS_US_EQUITIES_BOE_SPECIFICATION_V2.pdf
        doc/specs/BATS/BATS_US_EQUITIES_OPTIONS_MULTICAST_PITCH_SPECIFICATION.pdf
        "doc/specs/CTA/cqs input spec v 21a_020314.pdf"
        "doc/specs/CTA/cqs output spec v 56_051614.pdf"
        doc/specs/CTA/CQS_Specification_Revision_56_20140516.pdf
        "doc/specs/CTA/cts input spec v 2.4a_020314.pdf"
        "doc/specs/CTA/cts output spec v 72_052214.pdf"
        doc/specs/CTA/CTS_Specification_Revision_72_20140522.pdf
        "doc/specs/CTA/Enhanced Autolink_User_Guide_v1 4_071410.pdf"
        doc/specs/CTA/ipmspecv1.39_06182013.pdf
        doc/specs/EDGE/DeNextGenMDMulticast.pdf
        "doc/specs/EDGE/Direct Edge XPRS API Manual.pdf"
        "doc/specs/HPR/HPR_TradingProtocols_ClientRulesOfEngagement-ZvzztTestOrder-LOC v0.12 092215.pdf"
        doc/specs/NASDAQ/moldudp64.pdf
        doc/specs/NASDAQ/NLSPlus_v1.pdf
        doc/specs/NASDAQ/NLSPlusSpecification.pdf
        doc/specs/NASDAQ/NLSSpecification.pdf
        doc/specs/NASDAQ/NQGLIMPSE-V4_1.pdf
        doc/specs/NASDAQ/NQGlimpseSpecification.pdf
        doc/specs/NASDAQ/NQLastSale-V1_1.pdf
        doc/specs/NASDAQ/NQTV-ITCH-V4_1.pdf
        doc/specs/NASDAQ/NQTVITCHSpecification.pdf
        doc/specs/NASDAQ/OUCH4.2.pdf
        doc/specs/NASDAQ/soupbintcp.pdf
        doc/specs/NASDAQ/UFO.pdf
        doc/specs/NASDAQ_BX/BXGLIMPSE-V4_1.pdf
        doc/specs/NASDAQ_BX/BXGLIMPSESpecification.pdf
        doc/specs/NASDAQ_BX/BXTV-ITCH-V4_1.pdf
        doc/specs/NASDAQ_BX/BXTVITCHSpecification.pdf
        doc/specs/NASDAQ_BX/NQBXOUCH42.pdf
        "doc/specs/NYSE/3rd Party Algo Message Flow.pdf"
        "doc/specs/NYSE/Broker Algo eQuote Spec v1_15.pdf"
        "doc/specs/NYSE/Broker Algo FIX Spec v2.0.pdf"
        "doc/specs/NYSE/NYSE OpenBook Ultra Spec v1.9.pdf"
        "doc/specs/NYSE/NYSE Order Imbalances Spec v1.12.pdf"
        doc/specs/NYSE/nyse_ccg_fix_specification_v5_7_final.pdf
        doc/specs/NYSE/nyseclassic_utpdirectspec_1.16_final.pdf
        doc/specs/NYSE_ARCA/14636_liq_indicators_arcadirectapi_130502.pdf
        doc/specs/NYSE_ARCA/arcadirectspecversion4_1_12.pdf
        "doc/specs/NYSE_ARCA/XDP Common Client Specification v1 6a.pdf"
        "doc/specs/NYSE_ARCA/XDP Depth of Book Client Spec v1.9a.pdf"
        "doc/specs/NYSE_ARCA/XDP Integrated Feed Client Specification V1.13b.pdf"
        "doc/specs/NYSE_ARCA/XDP Trades Client Specification V2.1.pdf"
        "doc/specs/PICO/Position Retrieval API - v1.0.1.pdf"
        doc/specs/UTP/omdfspecification.pdf
        doc/specs/UTP/uqdfspecification.pdf
        doc/specs/UTP/utdfspecification.pdf
        doc/CMakeLists.txt
        doc/Doxyfile.in
        doc/ido.opf
        example/CMakeLists.txt
        hooks/pre-commit/dont_break_build.sh
        hooks/pre-commit.sh
        src/apps/conf_reader/main.cpp
        src/apps/engine/engine.cpp
        src/apps/logger/logger.cpp
        src/apps/logger/logger.hpp
        src/apps/pcap_stats/main.cpp
        src/apps/pricer/main.cpp
        src/apps/pyorderlog/main.cpp
        src/apps/reorderpcap/reorderpcap.cpp
        src/apps/reorderpcap/reorderpcap.hpp
        src/apps/sampler/main.cpp
        src/apps/seqnumcap/main.cpp
        src/apps/seqnumcap/SeqnumCap.cpp
        src/apps/seqnumcap/SeqnumCap.hpp
        src/apps/simtest/main.cpp
        src/apps/uncap/uncap.c
        src/core/i01_core/spdlog/include/spdlog/details/async_log_helper.h
        src/core/i01_core/spdlog/include/spdlog/details/async_logger_impl.h
        src/core/i01_core/spdlog/include/spdlog/details/file_helper.h
        src/core/i01_core/spdlog/include/spdlog/details/format-impl.h
        src/core/i01_core/spdlog/include/spdlog/details/format.h
        src/core/i01_core/spdlog/include/spdlog/details/line_logger.h
        src/core/i01_core/spdlog/include/spdlog/details/log_msg.h
        src/core/i01_core/spdlog/include/spdlog/details/logger_impl.h
        src/core/i01_core/spdlog/include/spdlog/details/mpmc_bounded_q.h
        src/core/i01_core/spdlog/include/spdlog/details/null_mutex.h
        src/core/i01_core/spdlog/include/spdlog/details/os.h
        src/core/i01_core/spdlog/include/spdlog/details/pattern_formatter_impl.h
        src/core/i01_core/spdlog/include/spdlog/details/registry.h
        src/core/i01_core/spdlog/include/spdlog/details/spdlog_impl.h
        src/core/i01_core/spdlog/include/spdlog/sinks/base_sink.h
        src/core/i01_core/spdlog/include/spdlog/sinks/file_sinks.h
        src/core/i01_core/spdlog/include/spdlog/sinks/null_sink.h
        src/core/i01_core/spdlog/include/spdlog/sinks/ostream_sink.h
        src/core/i01_core/spdlog/include/spdlog/sinks/sink.h
        src/core/i01_core/spdlog/include/spdlog/sinks/stdout_sinks.h
        src/core/i01_core/spdlog/include/spdlog/sinks/syslog_sink.h
        src/core/i01_core/spdlog/include/spdlog/async_logger.h
        src/core/i01_core/spdlog/include/spdlog/common.h
        src/core/i01_core/spdlog/include/spdlog/formatter.h
        src/core/i01_core/spdlog/include/spdlog/logger.h
        src/core/i01_core/spdlog/include/spdlog/spdlog.h
        src/core/i01_core/spdlog/include/spdlog/tweakme.h
        src/core/i01_core/Allocator.hpp
        src/core/i01_core/Alphanumeric.hpp
        src/core/i01_core/Application.hpp
        src/core/i01_core/AsyncMappedFile.hpp
        src/core/i01_core/Config.hpp
        src/core/i01_core/Date.hpp
        src/core/i01_core/Environment.hpp
        src/core/i01_core/EventListener.hpp
        src/core/i01_core/FD.hpp
        src/core/i01_core/FileBase.hpp
        src/core/i01_core/Lock.hpp
        src/core/i01_core/Log.hpp
        src/core/i01_core/Logger.hpp
        src/core/i01_core/LZ4.hpp
        src/core/i01_core/macro.hpp
        src/core/i01_core/MappedRegion.hpp
        src/core/i01_core/MappedRing.hpp
        src/core/i01_core/MIC.def.hpp
        src/core/i01_core/MIC.hpp
        src/core/i01_core/NamedThread.hpp
        src/core/i01_core/Pcap.hpp
        src/core/i01_core/PMQOSInterface.hpp
        src/core/i01_core/Readline.hpp
        src/core/i01_core/SignalListener.hpp
        src/core/i01_core/Singleton.hpp
        src/core/i01_core/Time.hpp
        src/core/i01_core/TimerListener.hpp
        src/core/i01_core/util.hpp
        src/core/i01_core/Version.hpp
        src/core/Allocator.cpp
        src/core/Application.cpp
        src/core/AsyncMappedFile.cpp
        src/core/Config.cpp
        src/core/Date.cpp
        src/core/Environment.cpp
        src/core/FD.cpp
        src/core/Lock.cpp
        src/core/Log.cpp
        src/core/Logger.cpp
        src/core/LZ4.cpp
        src/core/macro.cpp
        src/core/MappedRegion.cpp
        src/core/MappedRing.cpp
        src/core/MIC.cpp
        src/core/NamedThread.cpp
        src/core/pcap-int.h
        src/core/Pcap.cpp
        src/core/PMQOSInterface.cpp
        src/core/Readline.cpp
        src/core/Singleton.cpp
        src/core/Time.cpp
        src/core/TimerListener.cpp
        src/md/ARCA/XDP/Decoder.cpp
        src/md/ARCA/XDP/Messages.cpp
        src/md/ARCA/XDP/Types.cpp
        src/md/BATS/BAF/Messages.cpp
        src/md/BATS/BAF/Types.cpp
        src/md/BATS/ONE/Messages.cpp
        src/md/BATS/ONE/Types.cpp
        src/md/BATS/PITCH2/Messages.cpp
        src/md/CTA/Decoder.cpp
        src/md/CTA/Messages.cpp
        src/md/CTA/Types.cpp
        src/md/EDGE/NextGen/Decoder.cpp
        src/md/EDGE/NextGen/Messages.cpp
        src/md/EDGE/NextGen/Types.cpp
        src/md/i01_md/ARCA/XDP/BookMux.hpp
        src/md/i01_md/ARCA/XDP/Decoder.hpp
        src/md/i01_md/ARCA/XDP/Messages.hpp
        src/md/i01_md/ARCA/XDP/Types.hpp
        src/md/i01_md/BATS/BAF/Messages.hpp
        src/md/i01_md/BATS/BAF/Types.hpp
        src/md/i01_md/BATS/ONE/Messages.hpp
        src/md/i01_md/BATS/ONE/Types.hpp
        src/md/i01_md/BATS/PITCH2/BookMux.hpp
        src/md/i01_md/BATS/PITCH2/Decoder.hpp
        src/md/i01_md/BATS/PITCH2/Messages.hpp
        src/md/i01_md/BATS/PITCH2/Types.cpp
        src/md/i01_md/BATS/PITCH2/Types.hpp
        src/md/i01_md/CTA/Decoder.hpp
        src/md/i01_md/CTA/Messages.hpp
        src/md/i01_md/CTA/Types.hpp
        src/md/i01_md/EDGE/NextGen/BookMux.hpp
        src/md/i01_md/EDGE/NextGen/Decoder.hpp
        src/md/i01_md/EDGE/NextGen/Messages.hpp
        src/md/i01_md/EDGE/NextGen/Types.hpp
        src/md/i01_md/NASDAQ/ITCH50/BookMux.hpp
        src/md/i01_md/NASDAQ/ITCH50/Decoder.hpp
        src/md/i01_md/NASDAQ/ITCH50/Messages.hpp
        src/md/i01_md/NASDAQ/ITCH50/Types.hpp
        src/md/i01_md/NASDAQ/MoldUDP64/Decoder.hpp
        src/md/i01_md/NASDAQ/MoldUDP64/Messages.hpp
        src/md/i01_md/NASDAQ/MoldUDP64/Types.hpp
        src/md/i01_md/NYSE/Alerts/Messages.hpp
        src/md/i01_md/NYSE/Alerts/Types.hpp
        src/md/i01_md/NYSE/PDP/BookMux.hpp
        src/md/i01_md/NYSE/PDP/Decoder.hpp
        src/md/i01_md/NYSE/PDP/Messages.hpp
        src/md/i01_md/NYSE/PDP/Types.hpp
        src/md/i01_md/NYSE/Trades/Messages.hpp
        src/md/i01_md/NYSE/Trades/Types.hpp
        src/md/i01_md/NYSE/common.hpp
        src/md/i01_md/TSE/Messages.hpp
        src/md/i01_md/TSE/Types.hpp
        src/md/i01_md/UTP/UQDF/Messages.hpp
        src/md/i01_md/UTP/UQDF/Types.hpp
        src/md/i01_md/UTP/UTDF/Messages.hpp
        src/md/i01_md/UTP/UTDF/Types.hpp
        src/md/i01_md/BookBase.hpp
        src/md/i01_md/BookMuxEvents.hpp
        src/md/i01_md/BookMuxListener.hpp
        src/md/i01_md/ConfigReader.hpp
        src/md/i01_md/DataManager.hpp
        src/md/i01_md/Decoder.hpp
        src/md/i01_md/DecoderEvents.hpp
        src/md/i01_md/DecoderMux.hpp
        src/md/i01_md/DiagnosticListener.hpp
        src/md/i01_md/FeedState.hpp
        src/md/i01_md/HistoricalData.hpp
        src/md/i01_md/HistoricalEventSource.hpp
        src/md/i01_md/L2Book.hpp
        src/md/i01_md/LastSale.hpp
        src/md/i01_md/LastSaleListener.hpp
        src/md/i01_md/MDEventPoller.hpp
        src/md/i01_md/MLBookMux.hpp
        src/md/i01_md/MsgStream.hpp
        src/md/i01_md/NoopRawListener.hpp
        src/md/i01_md/Order.hpp
        src/md/i01_md/OrderBook.hpp
        src/md/i01_md/OrderData.hpp
        src/md/i01_md/RawListener.hpp
        src/md/i01_md/SeqnumListener.hpp
        src/md/i01_md/Symbol.hpp
        src/md/i01_md/SymbolState.hpp
        src/md/i01_md/UnitState.hpp
        src/md/i01_md/Universe.hpp
        src/md/i01_md/util.hpp
        src/md/NASDAQ/ITCH50/Decoder.cpp
        src/md/NASDAQ/ITCH50/Messages.cpp
        src/md/NASDAQ/ITCH50/Types.cpp
        src/md/NASDAQ/MoldUDP64/Decoder.cpp
        src/md/NASDAQ/MoldUDP64/Messages.cpp
        src/md/NASDAQ/MoldUDP64/Types.cpp
        src/md/NYSE/Alerts/Messages.cpp
        src/md/NYSE/Alerts/Types.cpp
        src/md/NYSE/PDP/Decoder.cpp
        src/md/NYSE/PDP/Messages.cpp
        src/md/NYSE/Trades/Messages.cpp
        src/md/NYSE/Trades/Types.cpp
        src/md/NYSE/common.cpp
        src/md/TSE/Messages.cpp
        src/md/TSE/Types.cpp
        src/md/UTP/UQDF/Messages.cpp
        src/md/UTP/UQDF/Types.cpp
        src/md/UTP/UTDF/Messages.cpp
        src/md/UTP/UTDF/Types.cpp
        src/md/BookBase.cpp
        src/md/BookMuxEvents.cpp
        src/md/ConfigReader.cpp
        src/md/DataManager.cpp
        src/md/Decoder.cpp
        src/md/DecoderMux.cpp
        src/md/DiagnosticListener.cpp
        src/md/HistoricalData.cpp
        src/md/L2Book.cpp
        src/md/MDEventPoller.cpp
        src/md/MLBookMux.cpp
        src/md/OrderBook.cpp
        src/md/OrderData.cpp
        src/md/SeqnumListener.cpp
        src/md/SymbolState.cpp
        src/net/i01_net/ConnectionListenerThread.hpp
        src/net/i01_net/EpollSet.hpp
        src/net/i01_net/EventPoller.hpp
        src/net/i01_net/HeartBeatConnThread.hpp
        src/net/i01_net/Interface.hpp
        src/net/i01_net/IPAddress.hpp
        src/net/i01_net/NLInterface.hpp
        src/net/i01_net/OpenOnloadExt.hpp
        src/net/i01_net/Pcap.hpp
        src/net/i01_net/PcapFileMux.hpp
        src/net/i01_net/PktListener.hpp
        src/net/i01_net/SFCFilterSpec.hpp
        src/net/i01_net/SFCInterface.hpp
        src/net/i01_net/SFCPktBuf.hpp
        src/net/i01_net/SFCVirtualInterface.hpp
        src/net/i01_net/SFCVISet.hpp
        src/net/i01_net/Socket.hpp
        src/net/i01_net/SocketListener.hpp
        src/net/i01_net/TCPSocket.hpp
        src/net/i01_net/UDPSocket.hpp
        src/net/ConnectionListenerThread.cpp
        src/net/EpollSet.cpp
        src/net/EventPoller.cpp
        src/net/HeartBeatConnThread.cpp
        src/net/Interface.cpp
        src/net/IPAddress.cpp
        src/net/NLInterface.cpp
        src/net/OpenOnloadExt.cpp
        src/net/Pcap.cpp
        src/net/PcapFileMux.cpp
        src/net/PktListener.cpp
        src/net/SFCInterface.cpp
        src/net/SFCPktBuf.cpp
        src/net/SFCVirtualInterface.cpp
        src/net/SFCVISet.cpp
        src/net/Socket.cpp
        src/net/TCPSocket.cpp
        src/net/UDPSocket.cpp
        src/oe/ARCA/ArcaDirect41/Messages.cpp
        src/oe/ARCA/ArcaDirect41/Messages.hpp
        src/oe/ARCA/ArcaDirect41/Types.cpp
        src/oe/ARCA/ArcaDirect41/Types.hpp
        src/oe/ARCA/ArcaDirect.cpp
        src/oe/ARCA/ArcaDirect.hpp
        src/oe/BATS/BOE20/Messages.cpp
        src/oe/BATS/BOE20/Messages.hpp
        src/oe/BATS/BOE20/Types.cpp
        src/oe/BATS/BOE20/Types.hpp
        src/oe/BATS/BOE.cpp
        src/oe/BATS/BOE.hpp
        src/oe/BATS/BOE20Session.cpp
        src/oe/BATS/BOE20Session.hpp
        src/oe/EDGE/XPRS130/Messages.cpp
        src/oe/EDGE/XPRS130/Messages.hpp
        src/oe/EDGE/XPRS130/Types.cpp
        src/oe/EDGE/XPRS130/Types.hpp
        src/oe/EDGE/XPRS.cpp
        src/oe/EDGE/XPRS.hpp
        src/oe/i01_oe/Risk/FirmRiskCheck.hpp
        src/oe/i01_oe/Risk/PortfolioRiskCheck.hpp
        src/oe/i01_oe/Risk/RiskCheck.hpp
        src/oe/i01_oe/Risk/SessionRiskCheck.hpp
        src/oe/i01_oe/ARCAOrder.hpp
        src/oe/i01_oe/BATSOrder.hpp
        src/oe/i01_oe/Blotter.hpp
        src/oe/i01_oe/BlotterReader.hpp
        src/oe/i01_oe/BlotterReaderListener.hpp
        src/oe/i01_oe/BOE20Order.hpp
        src/oe/i01_oe/EqInstUniverse.hpp
        src/oe/i01_oe/EquityInstrument.hpp
        src/oe/i01_oe/FileBlotter.hpp
        src/oe/i01_oe/FileBlotterReader.hpp
        src/oe/i01_oe/Instrument.hpp
        src/oe/i01_oe/InstrumentStatistics.hpp
        src/oe/i01_oe/L2SimSession.hpp
        src/oe/i01_oe/NASDAQOrder.hpp
        src/oe/i01_oe/NYSEOrder.hpp
        src/oe/i01_oe/Order.hpp
        src/oe/i01_oe/OrderListener.hpp
        src/oe/i01_oe/OrderLogFormat.hpp
        src/oe/i01_oe/OrderManager.hpp
        src/oe/i01_oe/OrderSession.hpp
        src/oe/i01_oe/OrderSessionPtr.hpp
        src/oe/i01_oe/Position.hpp
        src/oe/i01_oe/SimSession.hpp
        src/oe/i01_oe/TradingFees.hpp
        src/oe/i01_oe/Types.hpp
        src/oe/NASDAQ/OUCH42/Messages.cpp
        src/oe/NASDAQ/OUCH42/Messages.hpp
        src/oe/NASDAQ/OUCH42/Types.cpp
        src/oe/NASDAQ/OUCH42/Types.hpp
        src/oe/NASDAQ/SoupBinTCP30/Listener.hpp
        src/oe/NASDAQ/SoupBinTCP30/Messages.cpp
        src/oe/NASDAQ/SoupBinTCP30/Messages.hpp
        src/oe/NASDAQ/SoupBinTCP30/Types.cpp
        src/oe/NASDAQ/SoupBinTCP30/Types.hpp
        src/oe/NASDAQ/UFO10/Listener.hpp
        src/oe/NASDAQ/UFO10/Messages.cpp
        src/oe/NASDAQ/UFO10/Messages.hpp
        src/oe/NASDAQ/UFO10/Types.cpp
        src/oe/NASDAQ/UFO10/Types.hpp
        src/oe/NASDAQ/OUCH.cpp
        src/oe/NASDAQ/OUCH.hpp
        src/oe/NASDAQ/OUCH42Session.cpp
        src/oe/NASDAQ/OUCH42Session.hpp
        src/oe/NASDAQ/SoupBinTCP.cpp
        src/oe/NASDAQ/SoupBinTCP.hpp
        src/oe/NASDAQ/UFO.cpp
        src/oe/NASDAQ/UFO.hpp
        src/oe/NYSE/UTPDirect/Messages.cpp
        src/oe/NYSE/UTPDirect/Messages.hpp
        src/oe/NYSE/UTPDirect/Types.cpp
        src/oe/NYSE/UTPDirect/Types.hpp
        src/oe/NYSE/NYSEAlgoSession.cpp
        src/oe/NYSE/NYSEAlgoSession.hpp
        src/oe/NYSE/NYSECCGfix_session.hpp
        src/oe/NYSE/UTPDirect.cpp
        src/oe/NYSE/UTPDirect.hpp
        src/oe/Risk/FirmRiskCheck.cpp
        src/oe/Risk/PortfolioRiskCheck.cpp
        src/oe/Risk/RiskCheck.cpp
        src/oe/Risk/SessionRiskCheck.cpp
        src/oe/Blotter.cpp
        src/oe/BlotterReader.cpp
        src/oe/BOE20Order.cpp
        src/oe/EqInstUniverse.cpp
        src/oe/EquityInstrument.cpp
        src/oe/FileBlotter.cpp
        src/oe/FileBlotterReader.cpp
        src/oe/Instrument.cpp
        src/oe/L2SimSession.cpp
        src/oe/NASDAQOrder.cpp
        src/oe/Order.cpp
        src/oe/OrderLogFormat.cpp
        src/oe/OrderManager.cpp
        src/oe/OrderSession.cpp
        src/oe/Position.cpp
        src/oe/SimSession.cpp
        src/oe/Types.cpp
        src/strats/aleph/aleph.cpp
        src/strats/aleph/aleph.hpp
        src/ts/i01_ts/AsyncNBBOEquitiesStrategy.hpp
        src/ts/i01_ts/AsyncTPSStrategy.hpp
        src/ts/i01_ts/engine.hpp
        src/ts/i01_ts/EquitiesStrategy.hpp
        src/ts/i01_ts/InstrumentStrategy.hpp
        src/ts/i01_ts/L1EquitiesStrategy.hpp
        src/ts/i01_ts/LogReaderStrategy.hpp
        src/ts/i01_ts/ManualStrategy.hpp
        src/ts/i01_ts/NBBOEquitiesStrategy.hpp
        src/ts/i01_ts/NBBOSamplerStrategy.hpp
        src/ts/i01_ts/PricerStrategy.hpp
        src/ts/i01_ts/SamplerStrategy.hpp
        src/ts/i01_ts/SimTestStrategy.hpp
        src/ts/i01_ts/Strategy.hpp
        src/ts/i01_ts/StrategyPlugin.hpp
        src/ts/tps/TPSServer.cpp
        src/ts/tps/TPSServer.hpp
        src/ts/AsyncNBBOEquitiesStrategy.cpp
        src/ts/AsyncTPSStrategy.cpp
        src/ts/EquitiesStrategy.cpp
        src/ts/InstrumentStrategy.cpp
        src/ts/L1EquitiesStrategy.cpp
        src/ts/LogReaderStrategy.cpp
        src/ts/ManualStrategy.cpp
        src/ts/NBBOEquitiesStrategy.cpp
        src/ts/NBBOSamplerStrategy.cpp
        src/ts/PricerStrategy.cpp
        src/ts/SamplerStrategy.cpp
        src/ts/SimTestStrategy.cpp
        src/ts/Strategy.cpp
        src/CMakeLists.txt
        test/core/core_alphanumeric.t.cpp
        test/core/core_application.t.cpp
        test/core/core_lz4.t.cpp
        test/core/core_mmap.t.cpp
        test/core/core_namedthread.t.cpp
        test/core/core_time.t.cpp
        test/core_config/core_config.t.cpp
        test/generic/mmap_vs_write.t.cpp
        test/logger/logger.t.cpp
        test/md/md_datamanager.t.cpp
        test/md/md_decoder.t.cpp
        test/md/md_decoder_util.hpp
        test/md/md_l2book.t.cpp
        test/md/md_nextgen.t.cpp
        test/md/md_orderbook.t.cpp
        test/md/md_pcap_reader.t.cpp
        test/md/md_pdp.t.cpp
        test/md/md_pitch2.t.cpp
        test/md/md_universe.t.cpp
        test/md/md_xdp.t.cpp
        test/net/net_interface.t.cpp
        test/net/net_sockets.t.cpp
        test/oe/oe_boe20session.t.cpp
        test/oe/oe_order.t.cpp
        test/oe/oe_risk.t.cpp
        test/oe/oe_universe.t.cpp
        test/oe_simsession/oe_simsession.t.cpp
        test/oe_simsession/oe_simsession_arca.t.cpp
        test/oe_simsession/oe_simsession_bats.t.cpp
        test/oe_simsession/oe_simsession_nasdaq.t.cpp
        test/oe_simsession/oe_simsession_nyse.t.cpp
        test/oe_simsession/oe_simsession_strategy.hpp
        test/oe_simsession/oe_test_helpers.hpp
        test/version/version.t.cpp
        test/CMakeLists.txt
        bootstrap-hooks.sh
        build.sh
        CMakeLists.txt
        CPackConfig.cmake
        LICENSE
        README.rst
        test-xnas.sh
        Vagrantfile)

add_executable(i01_2 ${SOURCE_FILES})