
set(DOXYFILE_LATEX ON)
set(DOXYFILE_SOURCE_DIR "${I01_SRC}")
set(DOXYFILE_EXTRA_SOURCES "${I01_INCLUDE}")
set(DOXYFILE_OUTPUT_DIR "${I01_BUILD_ROOT}/doc")
include(UseDoxygen)
install(DIRECTORY "${DOXYFILE_OUTPUT_DIR}/html" DESTINATION "doc" COMPONENT docs OPTIONAL)
install(DIRECTORY "${DOXYFILE_OUTPUT_DIR}/latex" DESTINATION "doc" COMPONENT docs OPTIONAL)
install(DIRECTORY "specs" DESTINATION "doc" COMPONENT docs OPTIONAL)
install(FILES "ido.opf" DESTINATION "doc" COMPONENT docs)
